fixed stepper on click css & increased z-index of navbar

--- a/client/admin-tool/src/css/Stepper.css
+++ b/client/admin-tool/src/css/Stepper.css
@@ -17,7 +17,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
   width: 300px;
   height: 40px;
-  border-radius: 5px;
+  border-radius: 10px;
   transition: 0.2s ease-out;
 }
 
@@ -37,10 +37,10 @@
 
 .stepper-item-div {
   margin-top: 10px;
-  border: 1px solid var(--lightpurple);
+  border: 1px solid black;
   width: 300px;
   height: 100%;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
   transition: 0.2s ease-out;
 }
@@ -48,6 +48,7 @@
 .active {
   border: 1px solid var(--orange);
   background-color: var(--orange);
+  color: white;
 }
 
 .stepper-item-div:hover {
